--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a28362">  <td>14/12/16 16:48:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Basicactioncmds.beforetest()[pri:0, instance:tamil.selenium.maven.Basicactioncmds@52e80740]">&gt;&gt;beforetest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22221156</td>   <td></td> </tr>
-<tr bgcolor="a28362">  <td>14/12/16 16:48:52</td>   <td>2012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Basicactioncmds.k4s()[pri:0, instance:tamil.selenium.maven.Basicactioncmds@52e80740]">k4s</td> 
-  <td>main@22221156</td>   <td></td> </tr>
+<tr bgcolor="79b1de">  <td>14/12/17 15:10:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Basicactioncmds.beforetest()[pri:0, instance:tamil.selenium.maven.Basicactioncmds@98c5e67]">&gt;&gt;beforetest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617013740</td>   <td></td> </tr>
+<tr bgcolor="79b1de">  <td>14/12/17 15:10:51</td>   <td>2011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Basicactioncmds.k4s()[pri:0, instance:tamil.selenium.maven.Basicactioncmds@98c5e67]">k4s</td> 
+  <td>main@617013740</td>   <td></td> </tr>
 </table>
