added more testcases for K4S

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -5,5 +5,6 @@
 <tr><td>tamil.selenium.maven.Basicactioncmds.JSalert</td></tr>
 <tr><td>tamil.selenium.maven.Basicactioncmds.gettitle</td></tr>
 <tr><td>tamil.selenium.maven.Basicactioncmds.SeldrpdwnVisibleTxt</td></tr>
+<tr><td>tamil.selenium.maven.Basicactioncmds.k4s_loginPage</td></tr>
 <tr><td>tamil.selenium.maven.Basicactioncmds.SeldrpdwnVal</td></tr>
 </table>
