--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,6 +1,7 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>tamil.selenium.maven.Basicactioncmds.SeldrpdwnByIdx</td></tr>
 <tr><td>tamil.selenium.maven.Basicactioncmds.test</td></tr>
+<tr><td>tamil.selenium.maven.Basicactioncmds.k4s</td></tr>
 <tr><td>tamil.selenium.maven.Basicactioncmds.JSexec</td></tr>
 <tr><td>tamil.selenium.maven.Basicactioncmds.JSalert</td></tr>
 <tr><td>tamil.selenium.maven.Basicactioncmds.gettitle</td></tr>
