--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f48ad0">  <td>14/12/23 15:06:05</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Basicactioncmds.aftertest()[pri:0, instance:tamil.selenium.maven.Basicactioncmds@6e3e5a91]">&lt;&lt;aftertest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@473155160</td>   <td></td> </tr>
-<tr bgcolor="f48ad0">  <td>14/12/23 15:05:49</td>   <td>-16266</td> <td>&nbsp;</td><td title="&gt;&gt;Basicactioncmds.beforetest()[pri:0, instance:tamil.selenium.maven.Basicactioncmds@6e3e5a91]">&gt;&gt;beforetest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@473155160</td>   <td></td> </tr>
-<tr bgcolor="f48ad0">  <td>14/12/23 15:05:53</td>   <td>-12677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Basicactioncmds.k4s()[pri:0, instance:tamil.selenium.maven.Basicactioncmds@6e3e5a91]">k4s</td> 
-  <td>main@473155160</td>   <td></td> </tr>
+<tr bgcolor="79b1de">  <td>14/12/30 12:51:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Basicactioncmds.AdminUser()[pri:0, instance:tamil.selenium.maven.Basicactioncmds@695cd9c0]">AdminUser</td> 
+  <td>main@67988487</td>   <td></td> </tr>
+<tr bgcolor="79b1de">  <td>14/12/30 12:51:30</td>   <td>5284</td> <td>&nbsp;</td><td title="&lt;&lt;Basicactioncmds.aftertest()[pri:0, instance:tamil.selenium.maven.Basicactioncmds@695cd9c0]">&lt;&lt;aftertest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@67988487</td>   <td></td> </tr>
+<tr bgcolor="79b1de">  <td>14/12/30 12:51:23</td>   <td>-1773</td> <td>&nbsp;</td><td title="&gt;&gt;Basicactioncmds.beforetest()[pri:0, instance:tamil.selenium.maven.Basicactioncmds@695cd9c0]">&gt;&gt;beforetest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@67988487</td>   <td></td> </tr>
 </table>
